# SHMS_orientation_processing_Cmodule

./: .gitignore  CMakeLists.txt  README.md  Solafune.ipynb  gauss_newton_algo.c  gauss_newton_algo.h  linear_algebra.c  linear_algebra.h  main.c  orientation_processing.c  orientation_processing.h
LinearAlgebra/: declareFunctions.h  mul.c
calib_coefs/: 5374047 adxl355 K-matrix.csv  5374047 adxl355 b-vector.csv  5374047 adxl355 temp coefs.csv  5374047 scl3300 K-matrix.csv  5374047 scl3300 b-vector.csv  5374047 scl3300 temp coefs.csv  5374049 adxl355 K-matrix.csv  5374049 adxl355 b-vector.csv  5374049 adxl355 temp coefs.csv  5374049 scl3300 K-matrix.csv  5374049 scl3300 b-vector.csv  5374049 scl3300 temp coefs.csv  5374051 adxl355 K-matrix.csv  5374051 adxl355 b-vector.csv  5374051 adxl355 temp coefs.csv  5374051 scl3300 K-matrix.csv  5374051 scl3300 b-vector.csv  5374051 scl3300 temp coefs.csv  5374077 adxl355 K-matrix.csv  5374077 adxl355 b-vector.csv  5374077 adxl355 temp coefs.csv  5374077 scl3300 K-matrix.csv  5374077 scl3300 b-vector.csv  5374077 scl3300 temp coefs.csv  7274610 adxl355 K-matrix.csv  7274610 adxl355 b-vector.csv  7274610 adxl355 temp coefs.csv  7274610 scl3300 K-matrix.csv  7274610 scl3300 b-vector.csv  7274610 scl3300 temp coefs.csv  7340075 adxl355 K-matrix.csv  7340075 adxl355 b-vector.csv  7340075 adxl355 temp coefs.csv  7340087 adxl355 K-matrix.csv  7340087 adxl355 b-vector.csv  7340087 adxl355 temp coefs.csv  7340087 scl3300 K-matrix.csv  7340087 scl3300 b-vector.csv  7340087 scl3300 temp coefs.csv  7340096 adxl355 K-matrix.csv  (+56 more)
